--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no">
 {% seo %}
 <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-<!--[if lt IE 9]>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-<![endif]-->
 </head>
 <body>
 <div class="wrapper">
 <header>
 
 {% if site.logo %}
-<a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="{{ site.title | default: site.github.repository_name }} Logo" /> </a>
+<a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="{{ site.title | default: site.github.repository_name }} Logo" /></a>
 {% else %}
 <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 {% endif %}
@@ -35,7 +31,6 @@
 <p>Copyright 2022 LETREC AB.</p>
 </footer>
 </div>
-<script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
 </html>
 
